--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kmurp62rulz.github.io/fuel-calculator-react",
+  "homepage": "https://kieran-murphy.github.io/fuel-calculator-react",
   "name": "fuel-calculator-react",
   "version": "0.1.0",
   "private": true,
